# llm-behavior-eval-lab

./: LICENSE  README.md  pyproject.toml
configs/: evaluation_config.yaml
docs/: CONTRIBUTING.md
examples/: safety_test_cases.py  usage_examples.py
src/: __init__.py
src/evaluators/: __init__.py  behavior_evaluator.py  bias_evaluator.py  capability_evaluator.py  consistency_evaluator.py  safety_evaluator.py
src/metrics/: __init__.py  metrics.py
src/monitors/: __init__.py  drift_monitor.py  performance_monitor.py  safety_monitor.py
src/utils/: __init__.py  evaluation_pipeline.py  model_interface.py  report_generator.py
tests/: test_evaluators.py
